--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,6 +52,8 @@
                             <ul class="dropdown-menu" ng-controller="MenuController">
                                 <li ng-switch-when="true"><a href="#/amazoninstance"><span class="glyphicon glyphicon-asterisk"></span>&nbsp;amazoninstance</a></li>
                                 <li ng-switch-when="true"><a href="#/device"><span class="glyphicon glyphicon-asterisk"></span>&nbsp;device</a></li>
+                                <li ng-switch-when="true"><a href="#/request"><span class="glyphicon glyphicon-asterisk"></span>&nbsp;request</a></li>
+                                <li ng-switch-when="true"><a href="#/requestdevicemapping"><span class="glyphicon glyphicon-asterisk"></span>&nbsp;requestdevicemapping</a></li>
                                 <!-- JHipster will add entities to the menu here -->
                             </ul>
                         </li>
@@ -177,6 +179,12 @@
         <script src="scripts/device/router_device.js"></script>
         <script src="scripts/device/controller_device.js"></script>
         <script src="scripts/device/service_device.js"></script>
+        <script src="scripts/request/router_request.js"></script>
+        <script src="scripts/request/controller_request.js"></script>
+        <script src="scripts/request/service_request.js"></script>
+        <script src="scripts/requestdevicemapping/router_requestdevicemapping.js"></script>
+        <script src="scripts/requestdevicemapping/controller_requestdevicemapping.js"></script>
+        <script src="scripts/requestdevicemapping/service_requestdevicemapping.js"></script>
         <!-- endbuild -->
 </body>
 </html>
