adding network profiles

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -182,6 +182,8 @@
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/collapse.js"></script>
         <script src="bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/tab.js"></script>
+        <script src="bower_components/justgage-bower/justgage.js"></script>
+        <script src="bower_components/raphael/raphael.js"></script>
         <script src="scripts/amazoninstance/router_amazoninstance.js"></script>
         <script src="scripts/amazoninstance/controller_amazoninstance.js"></script>
         <script src="scripts/amazoninstance/service_amazoninstance.js"></script>
@@ -191,6 +193,8 @@
         <script src="scripts/request/router_request.js"></script>
         <script src="scripts/request/controller_request.js"></script>
         <script src="scripts/request/service_request.js"></script>
+        <script src="scripts/networkprofile/controller_network.js"></script>
+        <script src="scripts/networkprofile/service_network.js"></script>
         <!-- endbuild -->
 </body>
 </html>
