adding ui features to request tab
active inactive requests
active requests expand to show the devices assigned

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -99,6 +99,8 @@
                                 </span>
                             </a>
                             <ul class="dropdown-menu">
+                                <li><a href="#/network"><span class="glyphicon glyphicon-dashboard"></span>
+                                    &#xA0;<span>Network Metrics</span></a></li>
                                 <li><a href="#/metrics"><span class="glyphicon glyphicon-dashboard"></span>
                                     &#xA0;<span translate="global.menu.account.metrics">Metrics</span></a></li>
                                 <li><a href="#/health"><span class="glyphicon glyphicon-heart"></span>
