fixing session login

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,8 @@
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
-
+        <link rel="stylesheet" href="styles/reset.css">
+        <link rel="stylesheet" href="styles/960.css">
         <link rel="stylesheet" href="bower_components/nvd3/nv.d3.css"/>
         <link rel="stylesheet" href="styles/bootstrap.css">
         <link rel="stylesheet" href="styles/main.css">
