--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,7 +32,18 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                  <a class="navbar-brand" href="#"><span translate="global.title">miaas</span></a>
+                  <a class="navbar-brand" href="#"><span>MIAAS</span><br><span class="tagline">Solution to your mobile cloud needs.</span></a>
+
+                </div>
+                <div class="collapse navbar-collapse alwaysshow" id="navbar-collapse">
+                    <ul class="nav navbar-nav nav-pills navbar-left">
+                        <li>
+                            <a href="#/pricing">
+                                <span class="glyphicon glyphicon-euro"></span>
+                                <span>Pricing</span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-collapse" ng-switch="authenticated">
                     <ul class="nav navbar-nav nav-pills navbar-right">
@@ -46,6 +57,13 @@
                             <a href="#/account">
                                 <span class="glyphicon glyphicon-home"></span>
                                 <span>Account</span>
+                            </a>
+                        </li>
+
+                        <li ng-show="isAuthorized(userRoles.user)">
+                            <a href="#/mydevices">
+                                <span class="glyphicon glyphicon-phone"></span>
+                                <span>My Devices</span>
                             </a>
                         </li>
 
@@ -104,7 +122,6 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>-->
-
 
         <!-- build:js scripts/scripts.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
