device detail page with file upload

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -154,6 +154,8 @@
         <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src="bower_components/flow.js/dist/flow.js"></script>
+        <script src="bower_components/ng-flow/dist/ng-flow.js"></script>
         <script src="scripts/http-auth-interceptor.js"></script>
         <script src="scripts/truncate.js"></script>
         <script src="scripts/utils.js"></script>
@@ -176,6 +178,7 @@
         <script src="scripts/request/service_request.js"></script>
         <script src="scripts/networkprofile/controller_network.js"></script>
         <script src="scripts/networkprofile/service_network.js"></script>
+        <script src="scripts/devicedetails/controller_devdetails.js"></script>
         <!-- endbuild -->
 </body>
 </html>
