--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -179,6 +179,7 @@
         <script src="scripts/networkprofile/controller_network.js"></script>
         <script src="scripts/networkprofile/service_network.js"></script>
         <script src="scripts/devicedetails/controller_devdetails.js"></script>
+        <script src="scripts/devicedetails/service_devdetails.js"></script>
         <!-- endbuild -->
 </body>
 </html>
